# pkg/openapi/model_base_execution_create.go
@@ -19,7 +19,6 @@ var _ MappedNullable = &BaseExecutionCreate{}
 
 // BaseExecutionCreate struct for BaseExecutionCreate
 type BaseExecutionCreate struct {
-	LastKnownState *ExecutionState `json:"lastKnownState,omitempty"`
 	// User provided custom properties which are not defined by its type.
 	CustomProperties *map[string]MetadataValue `json:"customProperties,omitempty"`
 	// An optional description about the resource.
@@ -36,8 +35,6 @@ type BaseExecutionCreate struct {
 // will change when the set of required properties is changed
 func NewBaseExecutionCreate() *BaseExecutionCreate {
 	this := BaseExecutionCreate{}
-	var lastKnownState ExecutionState = EXECUTIONSTATE_UNKNOWN
-	this.LastKnownState = &lastKnownState
 	return &this
 }
 
@@ -46,41 +43,7 @@ func NewBaseExecutionCreate() *BaseExecutionCreate {
 // but it doesn't guarantee that properties required by API are set
 func NewBaseExecutionCreateWithDefaults() *BaseExecutionCreate {
 	this := BaseExecutionCreate{}
-	var lastKnownState ExecutionState = EXECUTIONSTATE_UNKNOWN
-	this.LastKnownState = &lastKnownState
 	return &this
-}
-
-// GetLastKnownState returns the LastKnownState field value if set, zero value otherwise.
-func (o *BaseExecutionCreate) GetLastKnownState() ExecutionState {
-	if o == nil || IsNil(o.LastKnownState) {
-		var ret ExecutionState
-		return ret
-	}
-	return *o.LastKnownState
-}
-
-// GetLastKnownStateOk returns a tuple with the LastKnownState field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *BaseExecutionCreate) GetLastKnownStateOk() (*ExecutionState, bool) {
-	if o == nil || IsNil(o.LastKnownState) {
-		return nil, false
-	}
-	return o.LastKnownState, true
-}
-
-// HasLastKnownState returns a boolean if a field has been set.
-func (o *BaseExecutionCreate) HasLastKnownState() bool {
-	if o != nil && !IsNil(o.LastKnownState) {
-		return true
-	}
-
-	return false
-}
-
-// SetLastKnownState gets a reference to the given ExecutionState and assigns it to the LastKnownState field.
-func (o *BaseExecutionCreate) SetLastKnownState(v ExecutionState) {
-	o.LastKnownState = &v
 }
 
 // GetCustomProperties returns the CustomProperties field value if set, zero value otherwise.
@@ -221,9 +184,6 @@ func (o BaseExecutionCreate) MarshalJSON() ([]byte, error) {
 
 func (o BaseExecutionCreate) ToMap() (map[string]interface{}, error) {
 	toSerialize := map[string]interface{}{}
-	if !IsNil(o.LastKnownState) {
-		toSerialize["lastKnownState"] = o.LastKnownState
-	}
 	if !IsNil(o.CustomProperties) {
 		toSerialize["customProperties"] = o.CustomProperties
 	}
