# pkg/openapi/model_serve_model_update.go
@@ -19,7 +19,6 @@ var _ MappedNullable = &ServeModelUpdate{}
 
 // ServeModelUpdate An ML model serving action.
 type ServeModelUpdate struct {
-	LastKnownState *ExecutionState `json:"lastKnownState,omitempty"`
 	// User provided custom properties which are not defined by its type.
 	CustomProperties *map[string]MetadataValue `json:"customProperties,omitempty"`
 	// An optional description about the resource.
@@ -34,8 +33,6 @@ type ServeModelUpdate struct {
 // will change when the set of required properties is changed
 func NewServeModelUpdate() *ServeModelUpdate {
 	this := ServeModelUpdate{}
-	var lastKnownState ExecutionState = EXECUTIONSTATE_UNKNOWN
-	this.LastKnownState = &lastKnownState
 	return &this
 }
 
@@ -44,41 +41,7 @@ func NewServeModelUpdate() *ServeModelUpdate {
 // but it doesn't guarantee that properties required by API are set
 func NewServeModelUpdateWithDefaults() *ServeModelUpdate {
 	this := ServeModelUpdate{}
-	var lastKnownState ExecutionState = EXECUTIONSTATE_UNKNOWN
-	this.LastKnownState = &lastKnownState
 	return &this
-}
-
-// GetLastKnownState returns the LastKnownState field value if set, zero value otherwise.
-func (o *ServeModelUpdate) GetLastKnownState() ExecutionState {
-	if o == nil || IsNil(o.LastKnownState) {
-		var ret ExecutionState
-		return ret
-	}
-	return *o.LastKnownState
-}
-
-// GetLastKnownStateOk returns a tuple with the LastKnownState field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ServeModelUpdate) GetLastKnownStateOk() (*ExecutionState, bool) {
-	if o == nil || IsNil(o.LastKnownState) {
-		return nil, false
-	}
-	return o.LastKnownState, true
-}
-
-// HasLastKnownState returns a boolean if a field has been set.
-func (o *ServeModelUpdate) HasLastKnownState() bool {
-	if o != nil && !IsNil(o.LastKnownState) {
-		return true
-	}
-
-	return false
-}
-
-// SetLastKnownState gets a reference to the given ExecutionState and assigns it to the LastKnownState field.
-func (o *ServeModelUpdate) SetLastKnownState(v ExecutionState) {
-	o.LastKnownState = &v
 }
 
 // GetCustomProperties returns the CustomProperties field value if set, zero value otherwise.
@@ -187,9 +150,6 @@ func (o ServeModelUpdate) MarshalJSON() ([]byte, error) {
 
 func (o ServeModelUpdate) ToMap() (map[string]interface{}, error) {
 	toSerialize := map[string]interface{}{}
-	if !IsNil(o.LastKnownState) {
-		toSerialize["lastKnownState"] = o.LastKnownState
-	}
 	if !IsNil(o.CustomProperties) {
 		toSerialize["customProperties"] = o.CustomProperties
 	}
